[Fix] Width on mobile

--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -1,5 +1,5 @@
 .loginContainer {
-  width: 300pt;
+  max-width: 300pt;
   margin: 0 auto;
   text-align: center;
 }
